added general styles

--- a/frontend/src/app/auth/auth.component.html
+++ b/frontend/src/app/auth/auth.component.html
@@ -1,21 +1,13 @@
 <div class="auth">
-  <div class="auth-container">
-    <div class="card">
-      <header class="auth-header">
-        <h1 class="auth-title">
-          <div class="logo">
-            <span class="1 11"></span>
-            <span class="1 12"></span>
-            <span class="1 13"></span>
-            <span class="1 14"></span>
-            <span class="1 15"></span>
-          </div>
-          Learn German
-        </h1>
-      </header>
-      <div class="auth-content">
-        <router-outlet></router-outlet>
-      </div>
-    </div>
-  </div>
+  <mat-card class="card">
+    <mat-card-title class="auth-header">
+      <h1>
+        Deutsch mit Matilda
+      </h1>
+    </mat-card-title>
+    <mat-card-content class="auth-content">
+      <router-outlet></router-outlet>
+    </mat-card-content>
+    <mat-card-footer> Some text with rules</mat-card-footer>
+  </mat-card>
 </div>
