--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -1,3 +1,6 @@
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+
+
 /**
  * Global Reset of all HTML Elements
  *
@@ -12,11 +15,10 @@
  *
  */
 html, body {
+  background-color: #EBF7D4;
   border: 0;
+  box-sizing: border-box;
   font-family: 'Lora', serif;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  line-height: 1.5;
   margin: 0;
   padding: 0;
 }
@@ -29,7 +31,7 @@ nav, footer, header, section, summary, mark, audio, video {
   padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, cit, code,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, address, code,
 del, dfn, em, ins, q, samp, small, strong, sub, sup, b, i, hr, dl, dt, dd,
 ol, ul, li, fieldset, legend, label {
   border: 0;
