--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -1,45 +1,46 @@
-<p class="text-xs-center">Enter for work</p>
-<form [formGroup]="form" (ngSubmit)="onSubmit()">
-  <div class="form-group"
-  [ngClass]="{'has-error': form.get('email').invalid && form.get('email').touched}">
-    <label for="email">Email</label>
-    <input type="text"
-    class="form-control underlined"
-    id="email"
-    placeholder="enter your email"
-    formControlName="email">
-    <span class="form-help-text" *ngIf="form.get('email').invalid && form.get('email').touched">
+<h1 class="sign-in-header">Sign in</h1>
+<form class="sign-in-form-group" [formGroup]="form" (ngSubmit)="onSubmit()">
+
+
+  <mat-form-field appearance="outline"
+                  [ngClass]="{'has-error': form.get('email').invalid && form.get('email').touched}">
+    <mat-label>E-mail</mat-label>
+    <input matInput
+           type="text"
+           placeholder="enter your email"
+           formControlName="email">
+    <mat-hint *ngIf="form.get('email').invalid && form.get('email').touched">
       <span *ngIf="form.get('email')['errors']['required']">Email can not be empty!</span>
       <span *ngIf="form.get('email')['errors']['email']">Enter correct email!</span>
-    </span>
+    </mat-hint>
+  </mat-form-field>
 
-  </div>
-  <div class="form-group"
-       [ngClass]="{'has-error': form.get('password').invalid && form.get('password').touched}">
-    <label for="password">Password</label>
-    <input type="password"
-    class="form-control underlined"
-    id="password"
-    placeholder="Password"
-    formControlName="password">
-    <span class="form-help-text" *ngIf="form.get('password').invalid && form.get('password').touched">
+
+  <mat-form-field appearance="outline"
+                  [ngClass]="{'has-error': form.get('password').invalid && form.get('password').touched}">
+    <mat-label>Password</mat-label>
+    <input matInput
+           type="password"
+           placeholder="Password"
+           formControlName="password">
+    <mat-hint class="form-help-text" *ngIf="form.get('password').invalid && form.get('password').touched">
       <span *ngIf="form.get('password')['errors']['required']">Password can not be empty!</span>
       <span *ngIf="form.get('password')['errors']['minlength']">
         Enter password must be more longer than {{form.get('password')['errors']['minlength']['requiredLength']}} chars!
         Now {{form.get('password')['errors']['minlength']['actualLength']}}.
       </span>
-    </span>
-  </div>
-  <div class="form-group">
-    <button type="submit"
-            class="btn btn-block btn-primary"
-            [disabled]="form.invalid"
-    >Enter</button>
-  </div>
-  <div class="form-group">
-    <p class="text-muted text-xs-center">
-      Don't have an account?
-      <a href="#">Register!</a>
-    </p>
-  </div>
+    </mat-hint>
+  </mat-form-field>
+
+  <button mat-raised-button
+          type="submit"
+          class="btn-submit"
+          [disabled]="form.invalid">
+    Enter
+  </button>
+
+  <p class="invitation-to-registration">
+    Don't have an account?
+    <a routerLink="/auth/registration">Sign up</a>
+  </p>
 </form>
