--- a/frontend/src/app/auth/registration/registration.component.html
+++ b/frontend/src/app/auth/registration/registration.component.html
@@ -1,18 +1,14 @@
-<p class="text-xs-center">Registration for access</p>
-<form>
-  <div class="form-group">
-    <label for="email">Email</label>
+<h1>Registration for access</h1>
+<form class="registration-form-group">
+  <mat-form-field appearance="outline">
+    <mat-label>Email</mat-label>
     <input type="text"
-    class="form-control underlined"
-    id="email"
     placeholder="Enter your email">
-  </div>
-  <div class="form-group has-error">
-    <label for="password">Password</label>
+  </mat-form-field>
+  <mat-form-field appearance="outline">
+    <label>Password</label>
     <input type="password"
-    class="form-control underlined"
-    id="password"
     placeholder="Enter your password">
     <span class="form-help-text">Error message.</span>
-  </div>
+  </mat-form-field>
 </form>
