--- a/frontend/src/app/auth/auth.component.less
+++ b/frontend/src/app/auth/auth.component.less
@@ -3,6 +3,11 @@
 :host {
   display: flex;
   justify-content: center;
+  .auth-header {
+    font-size: 30px;
+    color: @accent-color-red-soft;
+    font-weight: bold;
+  }
 }
 .auth {
   color: blue;
