--- a/frontend/src/app/auth/login/login.component.less
+++ b/frontend/src/app/auth/login/login.component.less
@@ -1,3 +1,9 @@
+.sign-in-header {
+  display: flex;
+  justify-content: center;
+  font-size: 20px;
+  font-weight: bold;
+}
 form.sign-in-form-group {
   width: 500px;
   display: flex;
