--- a/frontend/src/app/start-page/start-page.component.html
+++ b/frontend/src/app/start-page/start-page.component.html
@@ -14,7 +14,7 @@
     <img routerLink="/auth/login" class="private-room" src="../../assets/private.png" alt="enter into private room">
   </div>
   <div class="authorization">
-    <button mat-stroked-button class="registration-button">Зарегистрируйтесь сейчас</button>
+    <button mat-stroked-button class="registration-button" routerLink="/auth/registration">Зарегистрируйтесь сейчас</button>
     <span class="span-link">через</span>
     <div class="social-button">
       <img src="../../assets/facebook.png" alt="facebook" class="facebook-icon">
@@ -31,12 +31,12 @@
   <figure>
     <img class="logo-sight-1" src="../../assets/keln_dom.JPG" alt="keln_dom">
   </figure>
-  <div class="lessons">
-    <h1>ОНЛАЙН-УРОКИ</h1>
-    <h2>немецкий с нуля</h2>
-      <ul>
-        <perfect-scrollbar [config]="{suppressScrollX: true}">
 
+    <div class="lessons">
+      <perfect-scrollbar [config]="{suppressScrollX: true}">
+      <h1>ОНЛАЙН-УРОКИ</h1>
+      <h2>немецкий с нуля</h2>
+      <ul>
         <li>
           <span>Вводный урок</span>
         </li>
@@ -45,11 +45,10 @@
           <span>#{{lesson.number}}</span>
           <span>{{lesson.name}}</span>
         </li>
-        </perfect-scrollbar>
-
       </ul>
+  </perfect-scrollbar>
+    </div>
 
-  </div>
   <div class="logo-sight-2">
   </div>
   <div class="trainer">
