--- a/frontend/src/app/start-page/start-page.component.less
+++ b/frontend/src/app/start-page/start-page.component.less
@@ -121,15 +121,18 @@
     }
     .lessons {
       width: 400px;
-      height: 600px;
+      max-height: 600px;
       color: @accent-color-red-soft;
+      position: relative;
       //color: #FFED98;
       flex-grow: 1;
       margin: 10px 20px;
-      box-shadow: -5px -5px 25px @background-color-green, 5px 5px 25px @background-color-green;
+      border-radius: 10px;
+      border: 3px solid @color-deep-purple;
       h1 {
         font-size: 37px;
         text-align: center;
+        margin-top: 10px;
       }
       h2 {
         font-size: 25px;
@@ -137,8 +140,8 @@
       }
       ul {
         margin-top: 25px;
-        height: 500px;
-
+        margin-right: 10px;
+        margin-left: 10px;
         li {
           list-style: none;
           font-size: 25px;
@@ -162,7 +165,6 @@
       width: 400px;
       height: 600px;
       color: @accent-color-red-soft;
-      //color: #FFED98;
       margin: 10px 20px;
       h1 {
         font-size: 37px;
@@ -177,7 +179,7 @@
         li {
           list-style: none;
           font-size: 35px;
-          border: 3px solid #FFED98;
+          border: 3px solid @color-deep-purple;
           border-radius: 10px 10px;
           padding: 10px 30px;
           margin-bottom: 30px;
