added loader and notification

--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -43,4 +43,6 @@
     Don't have an account?
     <a routerLink="/auth/registration">Sign up</a>
   </p>
+
+  <lde-notification *ngIf="error.isShow">{{error.message}}</lde-notification>
 </form>
