--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -62,3 +62,26 @@ a img {
 :focus {
   outline: 0;
 }
+
+.sk-rotating-plane {
+  width: 100px;
+  height: 100px;
+  margin: auto;
+  background-color: #673ab7;
+  animation: sk-rotating-plane 1.2s infinite ease-in-out;
+  position: absolute;
+  top: calc(50% - 50px);
+  left: calc(50% - 50px);
+}
+
+@keyframes sk-rotating-plane {
+  0% {
+    transform: perspective(120px) rotateX(0deg) rotateY(0deg);
+  }
+  50% {
+    transform: perspective(120px) rotateX(-180.1deg) rotateY(0deg);
+  }
+  100% {
+    transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
+  }
+}
