--- a/frontend/src/styles/styles-variables.less
+++ b/frontend/src/styles/styles-variables.less
@@ -5,3 +5,11 @@
 @background-color-dark-blue: #091D34;
 @color-deep-purple: #673ab7;
 
+@keyframes hide-show{
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
