--- a/frontend/src/app/start-page/start-page.component.less
+++ b/frontend/src/app/start-page/start-page.component.less
@@ -11,7 +11,6 @@
     padding-top: 15px;
     padding-bottom: 15px;
     background: @background-color-green;
-    border-bottom: 10px solid #207F60;
 
     .logo-1 {
       align-self: center;
@@ -120,19 +119,19 @@
       opacity: 0.8;
     }
     .lessons {
-      width: 400px;
+      width: 300px;
       max-height: 600px;
       color: @accent-color-red-soft;
       position: relative;
-      //color: #FFED98;
-      flex-grow: 1;
       margin: 10px 20px;
       border-radius: 10px;
       border: 3px solid @color-deep-purple;
+      flex-grow: 2;
       h1 {
-        font-size: 37px;
+        font-size: 28px;
         text-align: center;
         margin-top: 10px;
+        cursor: pointer;
       }
       h2 {
         font-size: 25px;
@@ -144,11 +143,12 @@
         margin-left: 10px;
         li {
           list-style: none;
-          font-size: 25px;
+          font-size: 23px;
           font-style: oblique;
           font-weight: bold;
           cursor: pointer;
           margin-top: 5px;
+          margin-bottom: 20px;
           &:hover {
             opacity: 0.8;
           }
@@ -157,17 +157,30 @@
           }
         }
       }
-
-
-
+    }
+    .stickers {
+      width: 400px;
+      max-height: 600px;
+      color: @accent-color-red-soft;
+      position: relative;
+      flex-grow: 3;
+      margin: 10px 20px;
+      border-radius: 10px;
+      border: 3px solid @color-deep-purple;
+      h1 {
+        font-size: 28px;
+        text-align: center;
+        margin-top: 10px;
+      }
     }
     .trainer {
-      width: 400px;
+      width: 300px;
       height: 600px;
       color: @accent-color-red-soft;
       margin: 10px 20px;
+      flex-grow: 1;
       h1 {
-        font-size: 37px;
+        font-size: 28px;
         text-align: center;
       }
       h2 {
@@ -178,7 +191,7 @@
         margin-top: 25px;
         li {
           list-style: none;
-          font-size: 35px;
+          font-size: 28px;
           border: 3px solid @color-deep-purple;
           border-radius: 10px 10px;
           padding: 10px 30px;
